# prosthetic_swing_control

./: README.md  armPID312.ino  notes.md  prj.conf  read_zephyr_serial.py  sample.yaml
armPID312/: armPID312.ino
boards/: teensy41.overlay
include/: data_profile.h  ina_219.h  mpu_6050.h
src/: data_profile.c  ina_219.c  main.c  mpu_6050.c
zephyr_teensy/: README.md  read_zephyr_serial.py
zephyr_teensy/data_processing/: 05ms_accel_clean.csv  05ms_accel_filtered.csv  05ms_torque_clean.csv  05ms_torque_filtered.csv  csv_clean.py  data_test.py
zephyr_teensy/motor_control/: CMakeLists.txt  prj.conf
zephyr_teensy/motor_control/boards/: teensy41.overlay
zephyr_teensy/motor_control/include/: data_profile.h
zephyr_teensy/motor_control/src/: data_profile.c  ina_219.c  main.c
zephyr_teensy/read_mpu6050/: CMakeLists.txt  README.md  prj.conf  sample.yaml
zephyr_teensy/read_mpu6050/boards/: teensy41.overlay
zephyr_teensy/read_mpu6050/src/: main.c
zephyr_teensy/sd_fatfs/: README.md  prj.conf
zephyr_teensy/sd_fatfs/boards/: teensy41.overlay
zephyr_teensy/sd_fatfs/src/: main.c
